Project/ansible/roles/front/templates/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Sep 16 00:37:06 2024
*filter
:INPUT ACCEPT [159:25656]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [139:28128]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -s 192.168.11.1/32 -j ACCEPT
-A INPUT -i lo -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT
-A INPUT -j DROP
COMMIT
# Completed on Mon Sep 16 00:37:06 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Sep 16 00:37:06 2024
*nat
:PREROUTING ACCEPT [5:1332]
:INPUT ACCEPT [3:180]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.11.0/24 -o eth1 -j MASQUERADE
COMMIT
# Completed on Mon Sep 16 00:37:06 2024
